# jpHack2024_scraping

./: .gitignore  README.md  main.py  pyproject.toml
src/jphack2024_scraping/: __init__.py  __main__.py  meitetsu_stattion.py  station_facilities.json
src/jphack2024_scraping/JR_ToukaidouHonsen/: get_info.py  get_url.py  station_facilities.json  toDIct.py
src/jphack2024_scraping/add_number/: add_number.py  add_station_number.json  split.json  split_line.py
src/jphack2024_scraping/aikan/: get_info.py  get_url.py  procee.py  processed_station_data.json  station_facilities.json
src/jphack2024_scraping/line_station/: change_line.py  line_station.py
src/jphack2024_scraping/meitetsu/: meitetsu.py  meitetsu_stattion.py  processed_station_data.json  station_facilities.json  switch_station_peope.py
src/jphack2024_scraping/station_saver/: combined_station_data.json  extract_lines.py  join_json.py  lines.json  stations_converted.json  switch_0_-1.py  translate_to_eng.py  translated_stations.json
src/jphack2024_scraping/tikatetsu/: get_info.py  get_store.py  nagoya_subway_facilities.json  switch_station.py
src/station_saver/: __init__.py
